--- a/primeiro-site/index.html
+++ b/primeiro-site/index.html
@@ -8,6 +8,15 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <p>Iniciando meus estudos em HTML, estou muito feliz!</p>
+    <p>Iniciando meus estudos em HTML, espero que seja muito produtivo!</p>
+    <p>Agora testarei os elementos de semântica!</p>
+    Elemento de linhas<br/>
+    <strong>A tag "STRONG" representa um conteúdo importante, ficando em negrito!</strong><br/>
+    <em>A tag "EM" representa um conteúdo a que se dá ênfase, ficando Itálico!</em><br/>
+    <p>Agora irei demonstrar como irei construir referências!</p>
+    Abaixo fiz a referência relativa, nesse caso de uma imagem.</br>
+    <img src="icone_html5.png" alt="icone do html5"></br>
+    E uma referência absoluta.</br>
+    <img src="http://blog.pucsp.br/tmd/files/2011/06/html5.gif"/>   
 </body>
 </html>
