--- a/primeiro-site/index.html
+++ b/primeiro-site/index.html
@@ -14,9 +14,42 @@
     <strong>A tag "STRONG" representa um conteúdo importante, ficando em negrito!</strong><br/>
     <em>A tag "EM" representa um conteúdo a que se dá ênfase, ficando Itálico!</em><br/>
     <p>Agora irei demonstrar como irei construir referências!</p>
-    Abaixo fiz a referência relativa, nesse caso de uma imagem.</br>
+    Abaixo fiz a referência relativa, nesse caso de uma imagem que está no meu servidor.</br>
     <img src="icone_html5.png" alt="icone do html5"></br>
-    E uma referência absoluta.</br>
+    E uma referência absoluta. Uma imagem que veio através de um site</br>
     <img src="http://blog.pucsp.br/tmd/files/2011/06/html5.gif"/>   
+    <p>Abaixo uma demiostração com listas ordenadas e não ordenadas.</p>
+    <ol>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+    </ol>
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item3</li>
+    </ul>
+    <p>Agora faremos uma tabela.</p>
+    <table>
+        <tr>               <!--Cria uma linha-->
+            <td>x1 y1</td> <!--Cria uma coluna-->
+            <td>x1 y2</td>
+            <td>x1 y3</td>
+        </tr>
+        <tr>
+            <td>x2 y1</td>
+            <td>x2 y2</td>
+            <td>x2 y3</td>
+        </tr>
+    </table>
+    <p>Podemos colocar símbolos e emoji no nosso texto com html!
+        <br> &reg; &copy; &trade;<br>
+        Para adicionar emoji deve ser iniciado o código com &#x:<br>
+        &#x1F61C <!-- site emojipedia para ver os códigos dos emojis-->
+        &#x1f911
+    </p><hr>    
+       <p>A seguir irei direcionar o usuário para uma página interna que aprenderei sobre "links / caminhos".</p>
+       <p><a href="links.html">Nos vemos lá!</a></p>
+
 </body>
 </html>
